Fixed additional CSS and changed a goHome() navigation to a shared service to call in multiple components. Also added a home button displayed in the scorecard component when refreshed or no data is available to easier see to navigate.

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar>
     <div class="toolbarBtn">
       <div class="buttonDiv">
-        <button mat-icon-button (click)="goHome()">
+        <button mat-icon-button (click)="dataShare.goHome()">
           <mat-icon>home</mat-icon>
         </button>
       </div>
